--- a/Day24/Own.css
+++ b/Day24/Own.css
@@ -1,5 +1,18 @@
 body{
     background-color: rgb(233, 232, 232);
+    scroll-behavior: smooth;
+    transform: 0.5s;
+    transition: 0.5s;
+}
+.content-1{
+    scroll-behavior:smooth;
+    transform: 0.5s;
+    transition: 0.5s;
+}
+html{
+    scroll-behavior: smooth;
+    transform: 0.5s;
+    transition: 0.5s;
 }
 .Logo{
     margin-top: 25px;
