--- a/Day33/Port-nav.css
+++ b/Day33/Port-nav.css
@@ -2,3 +2,11 @@
     margin-top: 15%;
     padding-left: 10%;
 }
+/* @media screen and (min-width:768px) {
+    img{
+        margin-top: 20px;
+        height: 20px;
+        width: 20px;
+    }
+
+} */
